Implementada segurança via JWT + finalização do README.